# app/Swagger/Schemas/UserCreateRequest.php
@@ -1,0 +1,17 @@
+<?php
+
+namespace App\Swagger\Schemas;
+
+use OpenApi\Annotations as OA;
+
+/**
+ * @OA\Schema(
+ *     schema="UserCreateRequest",
+ *     type="object",
+ *     required={"name", "email", "password"},
+ *     @OA\Property(property="name", type="string", example="John Doe 2"),
+ *     @OA\Property(property="email", type="string", format="email", example="john@example.com"),
+ *     @OA\Property(property="password", type="string", format="password", example="secret123")
+ * )
+ */
+class UserCreateRequest {}
